<resources>
    <string name="app_name">Python tutorial</string>
    <string name="tutorial">Tutorial</string>
    <string name="programs">Programs</string>
    <string name="faq">FAQ</string>
    <string name="program">TODO</string>
    <string name="FAQ">FAQ</string>
    <string name="comments">Comments</string>
    <string name="quiz">Quiz</string>
    <string name="share">Share</string>
    <string name="python_logo">Python logo</string>
    <string name="devloped_and_designed_by_jeet_and_parth">Devloped and Designed By Jeet And Parth</string>
    <string name="desc">No need to carry heavy books for Pythone language.
        this app contains more than <b>10+programs ,FAQ,Quiz.</b>
        you can ask your question in comment section.
        if you have any doubt or any query related to python language.</string>
    <string name="font_size">font-size</string>
    <string name="reader_mode">Reader mode</string>
    <string name="title_activity_settings">Settings</string>

    <string name="sp_on">true</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="not_connected_to_internet">Not connected to internet</string>
    <string name="deafulit_client_id">697980619685-g14a9qa9lot48csr4qk0bqt6d0nd9ljb.apps.googleusercontent.com</string>
    <string name="sedeafulit_client_id">697980619685-k59rsk1f56050vm8927voeoonage15ks.apps.googleusercontent.com</string>
    <string name="newdeafulit_client_id">697980619685-k59rsk1f56050vm8927voeoonage15ks.apps.googleusercontent.com
    </string>
</resources>
